--- a/configs/my_config.yaml
+++ b/configs/my_config.yaml
@@ -2,7 +2,10 @@
 multiprocessing: False
 path_pretrained_models: './pretrained_models'
 dataset:
-    data_path: 'data'
-blip_v2_model_type: blip2-flan-t5-xxl  # Change to blip2-flan-t5-xl for smaller GPUs
+    data_path: 'data/OkVQA'
+    dataset_size: 'full'
+    captions: True
+blip_v2_model_type: blip2-flan-t5-xl  # Change to blip2-flan-t5-xl for smaller GPUs
 blip_half_precision: True
 # Add more changes here, following the same format as base_config.yaml
+execute_code: True  
