--- a/configs/benchmarks/okvqa.yaml
+++ b/configs/benchmarks/okvqa.yaml
@@ -1,6 +1,7 @@
 dataset:
-    data_path: /path/to/datasets/OKVQA
+    data_path: data/OkVQA/
     dataset_name: OKVQA
+    dataset_size: 'small'
     split: test
     testing: False
     max_samples:
@@ -9,20 +10,22 @@ dataset:
 
 prompt: ./prompts/benchmarks/okvqa.prompt
 
+execute_code: True  
+
 results_dir: ./results/okvqa/
 
-load_models:
-    maskrcnn: False
-    clip: False
-    glip: False
-    owlvit: False
-    tcl: False
-    gpt3_list: True
-    gpt3_qa: True
-    gpt3_guess: True
-    depth: False
-    blip: True
-    saliency: False
-    xvlm: False
+# load_models:
+#     maskrcnn: False
+#     clip: False
+#     glip: True
+#     owlvit: False
+#     tcl: False
+#     gpt3_list: True
+#     gpt3_qa: True
+#     gpt3_guess: True
+#     depth: False
+#     blip: True
+#     saliency: False
+#     xvlm: False
 
 fixed_code_file: ./prompts/fixed_code/blip2.prompt
