--- a/configs/config_codellama.yaml
+++ b/configs/config_codellama.yaml
@@ -1,6 +1,6 @@
 codex:
     model: codellama
-    codellama_model_name: /path/to/code_llama_models/CodeLlama-34b-Python-hf
+    codellama_model_name: /data/datasets/models/huggingface/meta-llama/CodeLlama-34b-Python-hf #/path/to/code_llama_models/CodeLlama-34b-Python-hf
 load_models:
     codex: False
     codellama: True
