--- a/configs/v_star_config.yaml
+++ b/configs/v_star_config.yaml
@@ -3,9 +3,10 @@ multiprocessing: False
 
 path_pretrained_models: './pretrained_models'
 dataset:
-    data_path: 'data/OkVQA'
-    dataset_size: 'selected'
-    split: 'test'
+    data_path: 'data/V_Star'
+    dataset_name: 'V_Star'
+    task_type : 'direct_attributes'
+    dataset_size: 'full'
     # captions: True
 blip_v2_model_type: blip2-flan-t5-xxl  # Change to blip2-flan-t5-xl for smaller GPUs
 blip_half_precision: True
@@ -20,11 +21,16 @@ gpt3:                                               # GPT-3 configuration
     model: chatgpt 
 
 codex:
-    temperature: 0.                                 # Temperature for Codex. (Almost) deterministic if 0
+    temperature: 0.2                                 # Temperature for Codex. (Almost) deterministic if 0
     best_of: 1                                      # Number of tries to choose from. Use when temperature > 0
     max_tokens: 512                                 # Maximum number of tokens to generate for Codex
-    prompt: ./prompts/chatapi.prompt                # Codex prompt file, which defines the API. (doesn't support video for now due to token limits)
-    model: gpt-4v
+    # prompt: ./prompts/benchmarks/v_star.prompt                # Codex prompt file, which defines the API. (doesn't support video for now due to token limits)
+    # prompt: ./prompts/benchmarks/v_star_visual_search.prompt
+    prompt: ./prompts/benchmarks/v_star_visual_search.prompt
+    model: gpt-3.5-turbo 
+
+select_answer_prompt: ./prompts/gpt3/v_star_options.txt
+
 # load_models: 
 #     codex: False
 #     codellama: True
